# SauceBunny

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DISTRIBUTION.md  LICENSE  README.md  SIDECAR-VERSIONS.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
_design/clippull/: README.md
_design/clippull/chats/: chat1.md
_design/clippull/project/: ClipPull.html  app.jsx  icons.jsx  logs.jsx  monitor.jsx  settings.jsx  sidebar.jsx  styles.css  toolbar.jsx
_design/clippull/project/design-system/: colors_and_type.css
scripts/: build-diarizer.sh  build-whisper.sh  check-notarization-ready.sh  fetch-ffmpeg.sh  refresh-sidecars.sh
src/: App.tsx  PanelApp.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/binaries/: whisper-cli-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  stream_proxy.rs
src-tauri/src/commands/: download.rs  media.rs  mod.rs  system.rs  transcript.rs
src/bindings/: AppError.ts  CacheStats.ts  DiarizeProgressEvent.ts  DoneEvent.ts  LocalFileMeta.ts  LogEvent.ts  Metadata.ts  ModelProgressEvent.ts  ProgressEvent.ts  TranscriptPhaseEvent.ts  WhisperModel.ts
src/components/: CanvasToast.tsx  CollapsibleSection.tsx  CommandPalette.tsx  Icons.tsx  LocalMediaPlayer.tsx  LogsPanel.tsx  MSEStreamPlayer.tsx  MediaBunnyPlayer.tsx  Monitor.tsx  NotificationBell.tsx  QueueDrawer.tsx  SettingsModal.tsx  Sidebar.tsx  Timeline.tsx  Toolbar.tsx  TranscriptViewer.tsx  Transport.tsx  ViewOptions.tsx  VolumeControl.tsx  YouTubeAuthModal.tsx  YouTubeSettings.tsx  player-handle.ts
src/components/transcript/: HistoryPopover.tsx  MergeConfirmPopover.tsx  RenamePopover.tsx  helpers.tsx
src/hooks/: use-panel-bus.ts
src/lib/: api.ts  build-id.ts  commands.ts  error-format.ts  filename.ts  mediabunny-audio.ts  mediabunny-export.ts  mediabunny-helpers.ts  migrate-storage.ts  sound.ts  srt.ts  storage.ts  stream-proxy.ts  text.ts  timecode.ts  transcript-history.ts  upload-date.ts  validation.ts
src/styles/: app.css  base.css  buttons.css  logs.css  monitor.css  palette.css  queue-drawer.css  settings.css  shell.css  sidebar.css  tokens.css  toolbar.css  transcript.css  transport.css
swift-sidecar/: Package.swift  README.md
swift-sidecar/Sources/saucebunny-diarize/: main.swift
